[tool.poetry]
name = "deepl-sandbox"
version = "0.1.0"
description = ""
authors = ["Pierre POLLOT"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
