[tool.poetry]
name = "deepl-sandbox"
version = "0.1.0"
description = ""
authors = ["Pierre POLLOT"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
matplotlib = "^3.8.4"
diffusers = "^0.27.2"
tqdm = "^4.66.4"
accelerate = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
